# mikanos-rs

./: .gitignore  Cargo.toml  Dockerfile  Makefile  OVMF_VARS.fd  README.md  build.sh  cat_mem_map.sh  common_target.json  docker-compose.yml  kernel.txt  layer.puml  make_img.sh  qemu.sh  qemu_debug.sh  run.sh  rust-toolchain.toml  setup.sh  show.sh
bootloader/: Cargo.toml  Makefile  build.sh  cat_mem_map.sh  make_img.sh  qemu.sh  qemu_debug.sh  run.sh  rust-toolchain.toml
bootloader-lib/: Cargo.toml
bootloader-lib/.cargo/: config
bootloader-lib/src/: error.rs  lib.rs
bootloader-lib/src/elf/: mod.rs
bootloader-lib/src/elf/ehdr/: elf_header_ptr.rs
bootloader-lib/src/elf/phdr/: mod.rs  program_header_table.rs
bootloader-lib/src/kernel/: entry_point.rs  mod.rs
bootloader-lib/src/kernel/loaders/: elf_loader.rs  mod.rs
bootloader/.cargo/: config
bootloader/memo/: UEFI.md
bootloader/src/: assembly.rs  error.rs  file.rs  gop.rs  main.rs  memory_map.rs  result.rs  unit.rs
bootloader/src/kernel/: boot_allocator.rs  mod.rs  process.rs
bootloader/src/kernel/loaders/: kernel_elf_loader.rs  mod.rs
common/: Cargo.toml
common/src/: assembly.rs  lib.rs  result.rs  unit.rs
kernel/: Cargo.toml  Makefile  asm.asm  asm.s  asmfunc.asm  build.rs  elf.sh  kernel.json  kernel.txt  target.json
kernel-lib/: Cargo.toml  asmfunc.asm  build.rs  font.cpp
kernel-lib/src/: acpi.rs  allo.rs  allocate.rs  allocator.rs  apic.rs  control_registers.rs  error.rs  fs.rs  gdt.rs  gop.rs  interrupt.rs  layers.rs  lib.rs  paging.rs  register.rs  segment.rs  segmentation.rs  serial.rs  stack.rs  sync.rs  sys.rs  task.rs  timer.rs  tss.rs
kernel-lib/src/acpi/: description_header.rs  fadt.rs  rsdp.rs  volatile_chars.rs  xsdt.rs
kernel-lib/src/acpi/description_header/: length.rs  signature.rs
kernel-lib/src/acpi/fadt/: flags.rs  pm_timer_block.rs
kernel-lib/src/acpi/rsdp/: check_sum.rs  revision.rs  signature.rs  xsdt_address.rs
kernel-lib/src/allocate/: bump_pointer_alloc.rs
kernel-lib/src/allocator/: allocate_map.rs  bitmap_memory_allocator.rs  bitmap_memory_manager.rs  memory_map.rs  memory_map_frame_iterable.rs  memory_map_range.rs
kernel-lib/src/allocator/memory_map/: frame.rs  frame_iter.rs  frame_iterable.rs  frame_range.rs  page_iter.rs  page_range.rs
kernel-lib/src/apic/: current_count.rs  device_config.rs  end_of_interrupt.rs  initial_count.rs  local_apic_id.rs  lvt_timer.rs
kernel-lib/src/apic/lvt_timer/: interrupt_id_number.rs  lvt_timer_field.rs  mask.rs  timer_mode.rs
kernel-lib/src/context/arch/: x86_64.rs
kernel-lib/src/frame/pixel/: color.rs  mod.rs  writer.rs
kernel-lib/src/fs/: alloc.rs
kernel-lib/src/gop/: char.rs  console.rs  console_builder.rs  font.rs  mod.rs  pixel.rs  shadow_frame_buffer.rs
kernel-lib/src/gop/char/: ascii.rs  ascii_char_writer.rs  char_writable.rs  mock_char_writer.rs
kernel-lib/src/gop/console/: console_builder.rs  console_writer.rs
kernel-lib/src/gop/pixel/: bgr_pixel_writer.rs  enum_pixel_writer.rs  gbr_pixel_writer.rs  mapper.rs  mock_buffer_pixel_writer.rs  mock_pixel_writer.rs  pixel_color.rs  pixel_frame.rs  pixel_iter.rs  pixel_row.rs  pixel_writable.rs  rc_pixel_writer.rs  rgb_pixel_writer.rs  writer.rs
kernel-lib/src/interrupt/: asm.rs  gate_type.rs  idt_descriptor.rs  interrupt_descriptor.rs  interrupt_descriptor_attribute.rs  interrupt_descriptor_table.rs  interrupt_descriptor_table_pointer.rs  interrupt_message.rs  interrupt_queue_waiter.rs  interrupt_vector.rs
kernel-lib/src/io/: asm.rs  io_memory_accessible.rs
kernel-lib/src/io/io_memory_accessible/: mock_memory_accessor.rs  real_memory_accessor.rs
kernel-lib/src/layers/: close_button.rs  console.rs  count.rs  cursor.rs  drawer.rs  layer.rs  layer_key.rs  layer_status.rs  layer_updatable.rs  mod.rs  multiple_layer.rs  plain.rs  shape.rs  terminal.rs  text.rs  text_box.rs  window.rs
kernel-lib/src/layers/console/: console_colors.rs  console_frame.rs  console_row.rs  text_frame.rs  text_row.rs
kernel-lib/src/layers/cursor/: buffer.rs  colors.rs  cursor_buffer.rs  (+3 more)
kernel-lib/src/paging/: entry.rs  linear_address.rs
kernel-lib/src/register/: read.rs  rflags.rs  write.rs
kernel-lib/src/segment/: asm.rs  descriptor.rs
kernel-lib/src/segmentation/: asm.rs  descriptor.rs
kernel-lib/src/sync/: preemptive_mutex.rs
kernel-lib/src/sys/: serial_print.rs
kernel-lib/src/task/: list.rs  message.rs  priority_level.rs  status.rs  switch.rs
kernel-lib/src/timer/: apic.rs  handler.rs  timer_manager.rs
kernel/.cargo/: config
kernel/src/: allocate.rs  apic.rs  entry_point.rs  gdt.rs  interrupt.rs  layers.rs  main.rs  paging.rs  qemu.rs  task.rs  test_runner.rs  usb.rs
kernel/src/allocate/: bump_pointer_alloc.rs
kernel/src/interrupt/: interrupt_queue_waiter.rs  mouse.rs  overflow.rs  page_fault.rs  timer.rs  xhci.rs
kernel/src/layers/: console.rs  desktop.rs  mod.rs  mouse.rs  screen.rs  terminal.rs  time_count.rs  window_keyboard.rs
kernel/src/sync/: preemptive_mutex.rs
kernel/src/task/: idle.rs  task_message_iter.rs
kernel/src/test_runner/: fs.rs  macros_test.rs  msi.rs  paging.rs  register.rs  task.rs  xhci.rs
kernel/src/usb/: keyboard.rs  mouse.rs  xhci.rs
macros/: Cargo.toml  Makefile
macros/src/: address.rs  generics.rs  lib.rs  volatile.rs  volatile_impls.rs
macros/src/volatile/: attribute.rs  impls.rs  read.rs  write.rs
macros/tests/: add_addr_bytes.rs  address.rs  impls.rs  read.rs  read_flag.rs  read_with_mask.rs  read_with_offset.rs  volatile.rs  volatile_bits.rs
pci/: Cargo.toml  Makefile
pci/src/: class_driver.rs  configuration_space.rs  error.rs  lib.rs  pci_device_searcher.rs  xhc.rs  xhci.rs
pci/src/class_driver/: boot_protocol_buffer.rs  interrupt_in.rs  keyboard.rs  mouse.rs
pci/src/configuration_space/: capability_header.rs  io.rs  msi.rs
pci/src/usb/: mouse.rs
pci/src/xhc/: allocator.rs  device_manager.rs  ports.rs  registers.rs  transfer.rs  waiting_ports.rs  xhci_library_registers.rs
pci/src/xhci/: allocator.rs  memory_allocatable.rs  mikanos_pci_memory_allocator.rs  registers.rs  transfer.rs
(+594 files in other folders)
