[workspace]
members = [
    "common-lib",
    "bootloader",
    "bootloader-lib",
    "kernel",
    "kernel-lib",
    "pci",
]



[workspace.dependencies]
x86_64 = "0.14.10"
lazy_static = "1.4.0"
xhci = "0.9.1"
modular-bitfield = "0.11.2"
dyn-clone = "1.0.10"
uefi = { version = "0.20.0", features = ["alloc"] }
uefi-services = "0.17.0"
auto-delegate = "0.0.5"
anyhow = { version = "1.0.71", default-features = false }
derive-getters = "0.2.1"
volatile-bits = { git = "https://github.com/elm-register/volatile-bits", branch = "master" }