[package]
name = "bootloader-lib"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { workspace = true }
uefi-services = { workspace = true }
thiserror-no-std = { workspace = true }
common-lib = { path = "../common-lib" }

