[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"


[dependencies]
uefi = { version = "0.19.0", features = ["alloc", "logger"] }
uefi-services = "0.16.0"