#cargo-features = ["per-package-target"]

[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"
#forced-target = "x86_64-unknown-uefi"


[dependencies]
common-lib = { path = "../common-lib"}
libs = { path = "../libs" }
uefi = { version = "0.19.0", features = ["alloc"] }
uefi-services = "0.16.0"
