#cargo-features = ["per-package-target"]

[package]
name = "bootloader"
version = "0.1.0"
edition = "2021"
#forced-target = "x86_64-unknown-uefi"


[dependencies]
uefi = { workspace = true }
uefi-services = { workspace = true }

common-lib = { path = "../common-lib" }
bootloader-lib = { path = "../bootloader-lib" }

