cargo-features = ["per-package-target"]


[package]
name = "common"
version = "0.1.0"
edition = "2021"
forced-target = "x86_64-unknown-uefi"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
uefi = { version = "0.19.0", features = ["alloc", "logger"] }