[package]
name = "kernel-lib"
version = "0.1.0"
edition = "2021"


[dependencies]
uefi = { workspace = true }
x86_64 = { workspace = true }
modular-bitfield = { workspace = true }
lazy_static = { workspace = true }
common-lib = { path = "../common-lib" }
once = "0.3.4"
spin = "0.9.5"
uart_16550 = "0.2.0"
paste = { workspace = true }
auto-delegate = { workspace = true }
anyhow = { workspace = true }
derive-getters = { workspace = true }
volatile-bits = { workspace = true }
memoffset = { workspace = true }
once_cell = { workspace = true }

[build-dependencies]
cc = { version = "1.0" }


[features]
default = ["alloc"]
alloc = []
