[package]
name = "kernel"
version = "0.1.0"
edition = "2021"



[dependencies]
common-lib = { path = "../common-lib" }
kernel-lib = { path = "../kernel-lib" }
pci = { path = "../pci" }
spin = "0.9.4"
macros = { path = "../macros", features = ["extra-traits"] }
uart_16550 = "0.2.0"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }