[package]
name = "kernel"
version = "0.1.0"
edition = "2021"



[dependencies]
uefi = { workspace = true }
x86_64 = { workspace = true }
xhci = { workspace = true }
common-lib = { path = "../common-lib", features = ["alloc"] }
kernel-lib = { path = "../kernel-lib" }
pci = { path = "../pci" }
spin = "0.9.4"
lazy_static = { version = "1.4.0", features = ["spin_no_std"] }
linked_list_allocator = "0.10.4"
pic8259 = "0.10.1"
anyhow = { workspace = true }
paste = { workspace = true }


[build-dependencies]
cc = "1.0.79"