[package]
name = "pci"
version = "0.1.0"
edition = "2021"


[dependencies]

bitfield-struct = { workspace = true }
enum-try-from = "0.0.1"
kernel-lib = { path = "../kernel-lib" }
macros = { path = "../macros", features = ["extra-traits"] }
xhci = { workspace = true }
modular-bitfield = { workspace = true }